fix: improve contrast for inline code (catppuccin#77)

--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -347,6 +347,11 @@ strong {
 
 .inline-code-block {
   color: #{$crust};
+  
+}
+
+code:not(pre code):not(.code-inner) {
+  background-color: var(--color-markup-code-inline) !important;
 }
 
 ::selection {
